# simple

./: .gitignore  LICENSE  README.md  pyproject.toml  test_drag.py  test_input.py  upload.py
docs/: CHANGELOG.md  claude-memory.md  upgrade-20260501-ppt.md
simple/: simple-ppt.md  simple.md
simple_code/: __init__.py  chat.py  config.py  main.py  ppt_mode.py  state.py  ui.py  widgets.py
simple_code/knowledge/ppt/: constraints.md  design-system.md  styles.md
simple_code/tools/: __init__.py  ask_user.py  create_ppt.py  create_resume.py  create_skill.py  edit_file.py  glob_files.py  grep_files.py  ppt_frameworks.py  read_clipboard.py  read_file.py  run_command.py  svg_to_pptx.py  task_list.py  web_fetch.py  web_search.py  write_file.py
video/: package-lock.json  package.json
video/src/: Opening.tsx  Root.tsx
video/src/components/: BlurReveal.tsx  GlitchText.tsx  ShimmerText.tsx
