[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-code"
version = "0.1.0"
description = "一款简单的终端 AI 助手"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "shenmo"}
]
keywords = ["ai", "cli", "coding", "assistant", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "textual>=3.0",
    "beautifulsoup4>=4.12",
    "requests>=2.28",
    "python-pptx>=1.0",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "pyperclip>=1.8",
    "rapidocr-onnxruntime>=1.4",
]

[project.scripts]
simple = "simple_code.main:main"

[project.urls]
Homepage = "https://github.com/simple0628/simple"

[tool.setuptools.packages.find]
include = ["simple_code*"]
